service box spacing fixed

--- a/src/CSS/Reviews.css
+++ b/src/CSS/Reviews.css
@@ -4,10 +4,9 @@
 
 .reviews {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 100px;
     flex-wrap: wrap;
-    gap: 50px;
 }
 
 .review {
@@ -51,6 +50,11 @@
 
     .review2 {
         display: none;
+    }
+
+    .reviews {
+        justify-content: center;
+        gap: 50px;
     }
 
 }
